Bug 383567 - Details section is empty in 'Do not know which files to compare.' window
Summary: Details section is empty in 'Do not know which files to compare.' window
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.6.0
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-08-15 16:25 UTC by Alexander Mentyu
Modified: 2018-06-22 08:00 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
empty-details-section-in-do-not-know-which-files-to-compare (10.95 KB, image/png)
2017-08-15 16:25 UTC, Alexander Mentyu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Mentyu 2017-08-15 16:25:39 UTC
Created attachment 107296 [details]
empty-details-section-in-do-not-know-which-files-to-compare

Details section has no text in this window. Screenshot is attached.
Comment 1 Alex Bikadorov 2017-08-15 18:55:18 UTC
You have to make the dialog bigger:)
Comment 2 Alexander Mentyu 2017-08-16 02:06:32 UTC
Oh, wow, yes it is so) Maybe pressing 'Details' could increase vertical size of Error window.
Comment 3 Nikita Melnichenko 2018-02-20 04:15:56 UTC
To repro: set current items on both sides to parent dir "..", issue Compare by Content action, then press Details in the error dialog.

Details should be visible. The layout of the dialog is ugly even after resize.
Comment 4 Davide Gianforte 2018-05-28 18:29:00 UTC
Git commit 94ff5d6ccb3a69627565e345882ae027f475930a by Davide Gianforte.
Committed on 28/05/2018 at 18:27.
Pushed by gengisdave into branch 'master'.

Fixed ugly message dialog on Compare by Content error

Change KmessageBox::detailedError dialog type to KmessageBox::sorry for a better view.

When the dialog is created the details are hidden. The detail text is not that long that it couldn't be shown directly.

FIXED: [ 383567 ] Details section is empty in 'Do not know which files to compare.' window

Differential Revision: https://phabricator.kde.org/D12904

M  +1    -1    krusader/krslots.cpp

https://commits.kde.org/krusader/94ff5d6ccb3a69627565e345882ae027f475930a
Comment 5 Nikita Melnichenko 2018-06-22 08:00:45 UTC
Git commit f47387a4aed32a25eb22fa4e48d986c71e52296d by Nikita Melnichenko, on behalf of Davide Gianforte.
Committed on 22/06/2018 at 07:56.
Pushed by melnichenko into branch '2.7'.

Fixed ugly message dialog on Compare by Content error

Change KmessageBox::detailedError dialog type to KmessageBox::sorry for a better view.

When the dialog is created the details are hidden. The detail text is not that long that it couldn't be shown directly.

FIXED: [ 383567 ] Details section is empty in 'Do not know which files to compare.' window

Differential Revision: https://phabricator.kde.org/D12904

(cherry picked from commit 94ff5d6ccb3a69627565e345882ae027f475930a)

M  +1    -1    krusader/krslots.cpp

https://commits.kde.org/krusader/f47387a4aed32a25eb22fa4e48d986c71e52296d